charts/supabase/_rland-deploy-secrets/studio-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: authentik
    namespace: gateway
spec:
    forwardAuth:
        address: http://authentik-server.auth.svc.cluster.local/outpost.goauthentik.io/auth/traefik
        trustForwardHeader: true
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: studio
  namespace: gateway
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`studio.r.land`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
      - name: realip
        namespace: traefik
      - name: authentik
    services:
    - name: supabase-supabase-studio
      namespace: supabase
      port: 3000
  tls:
    secretName: cloudflare-rland-cert
